v4.4.4   - Reworked loading of image sequences to take advantage of threads.
	   Now one idle thread caches images while playing.  This works
	   very nicely with multipart OpenEXRs and with small (< 2K) 8 bit
	   PNGs, IFFs, etc.

v4.4.3   - Bug fixed loading of tiff files due to a library conflict on
	   Linux.

v4.4.2   - Bug fixed playback/cache of sequences when frames did not
	   begin at 1.
	 - Documented all commands in the connections section of the
	   manual.
	 - Updated color management docs to talk about OCIO.
	 - Removed a bunch of SCOPED_LOCK( _mutex ) which were unneeded.
	 - Made detection of sequences on disk more reliable.

v4.4.1   - Bug fixed Connections to work on all (?) commands.
	 - Bug fixed Connections to not use relative paths in image names.
	   Full paths are passed instead.  This fixes the problem of
	   two mrViewers started at different locations.
	 - Several minor bug fixes to preload caching.  Now precache
	   reel and gui reel are different variables.
	 - Added draw, erase, text, move picture hotkeys.  They are
	   SHIFT+first letter of the tool.  Area selection remains
	   as SHIFT+Drag.
	 - Several minor bug fixes to BG playback.

v4.4.0	 - Bug fixed BG playback of movies and sequences.  It is now
	   possible to have a FG image and comp it on the background.
	   This was a regression from some older version.
	 - You currently cannot put an EDL in the background and have it
	   play/loop correctly.  It will hang the viewer.
	 - Added a shortcut to change pen size.  By default it is [,]
	   when the action mode is draw or erase.


v4.3.9   - Made ghosting be a global setting instead of a per shape
	   setting.  This allows easily changing the previous/next
	   ghosting value and see the result in real time.
	 - Added "Ghosting <previous> <next>" to list of reel commands
	   to control the ghosting of previous/next frames.  Note that
	   even thou it is a reel setting, only one setting is valid
	   per session (the last loaded).